--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
         <p>Add 3</p>
         <p>Add 4</p>
 
-        <p>Add 5</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-
-        <p>Add 7</p>
-        <h1>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium cupiditate pariatur perspiciatis officiis nesciunt veniam, ratione aut modi, eveniet illo quas odio sunt quis eos voluptates maxime ex! Suscipit, voluptate?</p>
     </div>
 </body>
 </html>
